# real-time-fraud-detection-and-risk-scoring-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
backend/: .env.example  pyproject.toml  requirements-ci.txt  requirements.txt
backend/app/: db.py  main.py  ml.py  models.py  schemas.py  security.py
backend/app/core/: config.py  db.py  logging.py
backend/app/data/: baseline_distributions.json
backend/app/ml/: explainer.py
backend/app/models/: __init__.py  decision.py  transaction.py
backend/app/routers/: audit.py  auth.py  cases.py  explanations.py  jobs.py  metrics.py  reviews.py  rules.py  scores.py  scoring.py  simulations.py  transactions.py
backend/app/schemas/: explanation.py  scoring.py  transaction.py
backend/app/services/: ai_assist.py  analytics.py  audit.py  decision_service.py  drift_detection.py  explanation_service.py  feature_service.py  fraud_engine.py  ingestion_service.py  jobs.py  model_eval.py  model_service.py  pii.py  review_workflow.py  rule_service.py  scenario_seed.py  scoring_service.py  transaction_service.py
backend/tests/: conftest.py  test_api.py  test_coverage.py  test_offline_pipeline.py  test_pipeline.py  test_services.py
data/: README.md  synthetic_transactions.csv
docs/: api.md  architecture.md  change-log.md  demo-runbook.md  demo.md  resume-bullets.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
scripts/: generate_synthetic_data.py  generate_synthetic_dataset.py  (+2 more)
(+34 files in other folders)
